--- a/arquivos3/css/style.css
+++ b/arquivos3/css/style.css
@@ -7,7 +7,7 @@ img{
 	width: 550px;
 	float: left;
 	margin: 5px;
-	
+
 }
 
 .bebidas{
@@ -26,4 +26,8 @@ h1{
 	margin: -10px;
 	color: #ffffff;
 	text-align: center;
+}
+
+.textspan{
+	color: #006600;
 }
